compile_tests/tests/compile-fail/missing_self.rs
extern crate savefile;
extern crate savefile_abi;
extern crate savefile_derive;
use std::collections::HashMap;
use savefile::prelude::*;
use savefile::{Deserialize, Deserializer, Serialize, Serializer};
use std::fmt::Debug;
use std::io::{BufWriter, Cursor, Write};
use savefile_abi::AbiConnection;
use savefile_derive::savefile_abi_exportable;

#[savefile_abi_exportable(version = 0)]
pub trait ExampleTrait {
    fn global_func(x: u32) -> u32;
//~^ 14:20: 14:21: Method 'global_func' must have 'self'-parameter (savefile-abi does not support methods without self)
}

fn main() {}